js262/test/language/module-code/comment-single-line-html-close.js


/*---
description: >
    HTML-like comments are not available in module code
    (SingleLineHTMLCloseComment)
esid: sec-html-like-comments
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

-->
